# bnp-firewall

./: .dockerignore  .env.dev  Dockerfile  Makefile  README.md  app.py  auth.py  conftest.py  converters.py  db.py  docker-compose.yaml  factories.py  health.py  pyproject.toml  repository.py  schemathesis.toml  settings.py  skaffold.yaml  test_auth.py  test_db.py  test_docs.py  test_health.py  use_case.py
firewalls/: models.py  repositories.py  services.py  use_cases.py
firewalls/flask/: __init__.py  exceptions.py  filtering_policies.py  firewalls.py  links.py  rules.py  shemas.py  validations.py
firewalls/flask/schemas/: __init__.py  base.py  filtering_policy_schema.py  firewall_schema.py  rule_schema.py
firewalls/flask/views/: __init__.py  filtering_policies.py  firewalls.py  rules.py
firewalls/tests/: factories.py  test_flask.py  test_models.py  test_services.py
firewalls/tests/test_flask/test_views/: conftest.py  test_end_to_end.py  test_filtering_policies.py  test_firewalls.py  test_rules.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
migrations/: alembic.ini  env.py
migrations/versions/: 2025_08_26_2256-4aa4a7d31ca6_add_firewall_models.py  2025_08_29_0010-5a9956d47ae9_update_firewall_models_according_to_.py  2025_08_31_1844-22db49a19cf4_update_firewall_models_according_to_.py  2025_08_31_2046-4a1bb7057228_add_priority_to_firewall_rules.py  2025_09_01_0858-8eff3e23cd6f_add_index_to_fields_that_are_included_.py
